--- a/css/tooplate-waso-strategy.css
+++ b/css/tooplate-waso-strategy.css
@@ -240,7 +240,13 @@ strong {
   background: var(--white-color);
   color: var(--dark-color);
 }
-
+.project-info h3 {
+  font-family: 'YourCustomFont', sans-serif;
+  font-size: 25px;
+  line-height: 1.3;        /* ajustabil după gust */
+  font-weight: 700;        /* sau 400, după cum e nevoie */
+  margin-bottom: 0.5em;    /* spațiu sub titlu */
+}
 
 /*---------------------------------------
   NAVIGATION              
@@ -252,7 +258,7 @@ strong {
 }
 
 .navbar-brand {
-  font-size: 32px;
+  font-size: 20px;
   font-weight: var(--font-weight-bold);
   color: var(--primary-color);
 }
